--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -340,3 +340,98 @@
   year={2019},
   publisher={Wiley Online Library}
 }
+
+@article{hoekman2017design,
+  title={Design for ground beetle abundance and diversity sampling within the National Ecological Observatory Network},
+  author={Hoekman, David and LeVan, Katherine E and Gibson, Cara and Ball, George E and Browne, Robert A and Davidson, Robert L and Erwin, Terry L and Knisley, C Barry and LaBonte, James R and Lundgren, Jonathan and others},
+  journal={Ecosphere},
+  volume={8},
+  number={4},
+  pages={e01744},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{balch2019neon,
+  title={NEON is seeding the next revolution in ecology},
+  author={Balch, Jennifer K and Nagy, R and Halpern, Benjamin S},
+  journal={Frontiers in Ecology and the Environment},
+  volume={18},
+  number={1},
+  year={2019}
+}
+
+@article{hoekman2016design,
+  title={Design for mosquito abundance, diversity, and phenology sampling within the National Ecological Observatory Network},
+  author={Hoekman, D and Springer, Yuri P and Barker, CM and Barrera, R and Blackmore, MS and Bradshaw, WE and Foley, Desmond H and Ginsberg, Howard S and Hayden, MH and Holzapfel, CM and others},
+  journal={Ecosphere},
+  volume={7},
+  number={5},
+  pages={e01320},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{thorpe2016introduction,
+  title={Introduction to the sampling designs of the N ational E cological O bservatory N etwork T errestrial O bservation S ystem},
+  author={Thorpe, Andrea S and Barnett, David T and Elmendorf, Sarah C and Hinckley, Eve-Lyn S and Hoekman, David and Jones, Katherine D and LeVan, Katherine E and Meier, Courtney L and Stanish, Lee F and Thibault, Katherine M},
+  journal={Ecosphere},
+  volume={7},
+  number={12},
+  pages={e01627},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{springer2016tick,
+  title={Tick-, mosquito-, and rodent-borne parasite sampling designs for the National Ecological Observatory Network},
+  author={Springer, Yuri P and Hoekman, David and Johnson, Pieter TJ and Duffy, Paul A and Hufft, Rebecca A and Barnett, David T and Allan, Brian F and Amman, Brian R and Barker, Christopher M and Barrera, Roberto and others},
+  journal={Ecosphere},
+  volume={7},
+  number={5},
+  pages={e01271},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+
+@book{bechtold2005enhanced,
+  title={The enhanced forest inventory and analysis program--national sampling design and estimation procedures},
+  author={Bechtold, William A and Patterson, Paul L},
+  volume={80},
+  year={2005},
+  publisher={USDA Forest Service, Southern Research Station}
+}
+
+@article{sauer2017first,
+  title={The first 50 years of the North American breeding bird survey},
+  author={Sauer, John R and Pardieck, Keith L and Ziolkowski Jr, David J and Smith, Adam C and Hudson, Marie-Anne R and Rodriguez, Vicente and Berlanga, Humberto and Niven, Daniel K and Link, William A},
+  journal={The Condor: Ornithological Applications},
+  volume={119},
+  number={3},
+  pages={576--593},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@article{hsieh2016inext,
+  title={iNEXT: an R package for rarefaction and extrapolation of species diversity (H ill numbers)},
+  author={Hsieh, TC and Ma, KH and Chao, Anne},
+  journal={Methods in Ecology and Evolution},
+  volume={7},
+  number={12},
+  pages={1451--1456},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{jost2006entropy,
+  title={Entropy and diversity},
+  author={Jost, Lou},
+  journal={Oikos},
+  volume={113},
+  number={2},
+  pages={363--375},
+  year={2006},
+  publisher={Wiley Online Library}
+}
